--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -24,6 +24,8 @@
             </div>
         </div>
 
+
+
         <!-- Summary Cards -->
         <div class="flex space-x-6 mb-8 ml-65">
             <div class="card text-orange-400 mr-5">
@@ -60,10 +62,14 @@
             <div class="flex space-x-2">
                 <select class="bg-transparent border-2 border-red-400 text-white px-2 py-1 rounded">
                     <option>All</option>
+                    <option>Income</option>
+                    <option>Expense</option>
                 </select>
                 <input type="text" placeholder="Search by description"
                     class="bg-transparent border-2 border-red-400 text-white px-2 py-1 rounded" />
-                <input type="date" class="bg-transparent border-2 border-red-400 text-white px-2 py-1 rounded" />
+
+                <input type="date" class="bg-transparent border-2 border-red-400 text-white px-2 py-1 rounded"
+                    placeholder="To" />
             </div>
             <button class="bg-green-700 hover:bg-green-600 text-white px-4 py-2 rounded">Export</button>
         </div>
