--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,7 +13,7 @@
 
     </head>
 
-    <body class="text-white p-6">
+    <body class="text-white p-6 h-screen">
         <!-- Header Section -->
         <div class="flex justify-between items-center mb-6">
             <h1 class="text-3xl font-bold neon-text">FIN-TRACK</h1>
@@ -111,7 +111,28 @@
             </tbody>
         </table>
 
+        <script>
+            // Sample JavaScript to handle form submission and table updates
+            document.querySelector('button').addEventListener('click', function () {
+                const amount = document.querySelector('input[type="number"]').value;
+                const trxType = document.querySelector('select').value;
+                const description = document.querySelector('textarea').value;
 
+                if (amount && trxType && description) {
+                    const tableBody = document.querySelector('tbody');
+                    const newRow = document.createElement('tr');
+                    newRow.classList.add('border-t', 'border-white');
+                    newRow.innerHTML = `
+                        <td class="p-2">1</td>
+                        <td class="p-2">${amount}</td>
+                        <td class="p-2">${new Date().toISOString().split('T')[0]}</td>
+                        <td class="p-2">${trxType}</td>
+                        <td class="p-2">${description}</td>
+                    `;
+                    tableBody.appendChild(newRow);
+                }
+            });
+        </script>
     </body>
 
 </html>
